<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".NewUserActivity">
    <EditText
        android:id="@+id/txtUsuarioNuevo"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/usuario"/>
    <EditText
        android:id="@+id/txtEmailNuevo"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/email"/>
    <EditText
        android:id="@+id/txtGeneroNuevo"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/genero"/>
    <EditText
        android:id="@+id/txtEstadoNuevo"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/estado"/>
    <Button
        android:layout_width="200dp"

        android:layout_height="wrap_content"
android:onClick="agregarNuevoUsuario"
        android:text="@string/agregar"/>

</LinearLayout>