<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ficha.FiltroFichaActivity">

        <Button
            android:layout_width="200dp"

            android:layout_height="wrap_content"
            android:onClick="agregarFiltroEmpleadoFicha"
            android:text="@string/agregarFisioterapeuta"/>
        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:lines="1"
            android:textStyle="bold"
            android:id="@+id/txtFisioterapeutaFiltrar"/>
        <Button
            android:layout_width="200dp"

            android:layout_height="wrap_content"
            android:onClick="agregarFiltroClienteFicha"
            android:text="@string/agregarPaciente"/>
        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:lines="1"
            android:textStyle="bold"
            android:id="@+id/txtPacienteFiltrar"/>
        <Button
            android:layout_width="200dp"

            android:layout_height="wrap_content"
            android:onClick="agregarFiltroCategoriaFicha"
            android:text="@string/agregarCategoria"/>
        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:lines="1"
            android:textStyle="bold"
            android:id="@+id/txtCategoriaFiltrar"/>
        <Button
            android:layout_width="200dp"

            android:layout_height="wrap_content"
            android:onClick="agregarFiltroSubCategoriaFicha"
            android:text="@string/agregarSubCategoria"/>
        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:lines="1"
            android:textStyle="bold"
            android:id="@+id/txtSubCategoriaFiltrar"/>
        <EditText
            android:id="@+id/txtFechaDesdeFicha"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/fechaDesde"/>
        <EditText
            android:id="@+id/txtFechaHastaFicha"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/fechaHasta"/>
        <Button
            android:layout_width="200dp"
            android:onClick="btnEventoFiltrarFicha"
            android:layout_height="wrap_content"

            android:text="@string/filtrar"/>

</LinearLayout>


