<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".FiltroReservaActivity">

        <Button
            android:layout_width="200dp"

            android:layout_height="wrap_content"
            android:onClick="agregarFiltroEmpleadoReserva"
            android:text="@string/agregarEmpleado"/>
        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:lines="1"
            android:textStyle="bold"
            android:id="@+id/txtEmpleadoAgregarReserva"/>
        <Button
            android:layout_width="200dp"

            android:layout_height="wrap_content"
            android:onClick="agregarFiltroClienteReserva"
            android:text="@string/agregarCliente"/>
        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:lines="1"
            android:textStyle="bold"
            android:id="@+id/txtClienteAgregarReserva"/>
        <EditText
            android:id="@+id/txtFechaDesde"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/fechaDesde"/>
        <EditText
            android:id="@+id/txtFechaHasta"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/fechaHasta"/>
        <Button
            android:layout_width="200dp"
            android:onClick="btnEventoFiltrarReserva"
            android:layout_height="wrap_content"

            android:text="@string/filtrar"/>

</LinearLayout>


