<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".SelectActivity">

        <Button
            android:layout_width="200dp"
            android:onClick="btnEventoAdministracionPacientes"
            android:layout_height="wrap_content"

            android:text="@string/paciente"/>
        <Button
            android:layout_width="200dp"
            android:onClick="btnEventoReservaTurnos"
            android:layout_height="wrap_content"

            android:text="@string/reserva"/>
        <Button
            android:layout_width="200dp"
            android:onClick="btnEventoFichaClinica"
            android:layout_height="wrap_content"

            android:text="@string/ficha"/>

</LinearLayout>


