<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".FiltroPacienteActivity">

        <EditText
            android:id="@+id/textNombrePaciente"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/nombre"/>
        <EditText
            android:id="@+id/textApellidoPaciente"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/apellido"/>
        <Button
            android:layout_width="200dp"
            android:onClick="btnEventoFiltrarPaciente"
            android:layout_height="wrap_content"

            android:text="@string/filtrar"/>

</LinearLayout>


