<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".NewReservaActivity">
    <!--<Spinner
        android:id="@+id/empleadoReserva"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"/>
    <Spinner
        android:id="@+id/clienteReserva"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"/>-->

    <Button
        android:layout_width="200dp"

        android:layout_height="wrap_content"
        android:onClick="agregarFiltroEmpleado"
        android:text="@string/agregarEmpleado"/>
    <TextView
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:lines="1"
        android:textStyle="bold"
        android:id="@+id/txtEmpleadoAgregar"/>
    <Button
        android:layout_width="200dp"

        android:layout_height="wrap_content"
        android:onClick="agregarFiltroCliente"
        android:text="@string/agregarCliente"/>
    <TextView
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:lines="1"
        android:textStyle="bold"
        android:id="@+id/txtClienteAgregar"/>
    <EditText
        android:id="@+id/txtFecha"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/fecha"/>
    <Button
        android:layout_width="200dp"

        android:layout_height="wrap_content"
        android:onClick="buscarHora"
        android:text="@string/buscarHora"/>
    <TextView
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:lines="1"
        android:textStyle="bold"
        android:id="@+id/txtHoraAgregar"/>
    <Button
        android:layout_width="200dp"

        android:layout_height="wrap_content"
        android:onClick="agregarNuevaReserva"
        android:text="@string/agregar"/>

</LinearLayout>