<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/textNombreUsuario"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/usuario"
        android:autofillHints="" />
    <EditText
        android:id="@+id/textPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:autofillHints="" />
    <Button
        android:layout_width="200dp"
        android:onClick="btnEventoIngresar"
        android:layout_height="wrap_content"

        android:text="@string/ingresar"
        tools:ignore="UsingOnClickInXml" />

</LinearLayout>


