<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ModificarReservaActivity">

    <TextView
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:lines="1"
        android:textStyle="bold"
        android:id="@+id/txtEmpleadoModificar"/>
    <TextView
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:lines="1"
        android:textStyle="bold"
        android:id="@+id/txtClienteModificar"/>
    <TextView
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:lines="1"
        android:textStyle="bold"
        android:id="@+id/txtFechaModificar"/>
    <TextView
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:lines="1"
        android:textStyle="bold"
        android:id="@+id/txtHoraInicioModificar"/>
    <TextView
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:lines="1"
        android:textStyle="bold"
        android:id="@+id/txtHoraFinModificar"/>
    <TextView
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:lines="1"
        android:textStyle="bold"
        android:id="@+id/txtFlagEstado"/>
    <EditText
        android:id="@+id/txtObservacion"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/observacion"/>
    <EditText
        android:id="@+id/txtAsistio"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/asistio"/>
    <Button
        android:layout_width="200dp"

        android:layout_height="wrap_content"
        android:onClick="modificarReserva"
        android:text="@string/modificar"/>
    <Button
        android:layout_width="200dp"

        android:layout_height="wrap_content"
        android:onClick="eliminarReserva"
        android:text="@string/cancelar"/>

</LinearLayout>